--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,20 +1,27 @@
----
-  name: Checks
-  on: [push]
+name: Checks
 
-  jobs:
-    test-lint:
-      name: Test and Lint
-      runs-on: ubuntu-latest
-      steps:
-        - name: Login to Docker Hub
-          uses: docker/login-action@v1
-          with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
-        - name: Checkout
-          uses: actions/checkout@v2
-        - name: Test
-          run: docker-compose run --rm app sh -c "python manage.py test"   
-        - name: Lint
-          run: docker-compose run --rm app sh -c "flake8" 
+on: [push]
+
+jobs:
+  test-lint:
+    name: Test and Lint
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build Docker images
+        run: docker compose build
+
+      - name: Run Tests
+        run: docker compose run --rm app sh -c "python manage.py test"
+
+      - name: Run Lint
+        run: docker compose run --rm app sh -c "flake8"
