--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Django>=3.2.4,<4.0
 djangorestframework>=3.12.4,<4.0
 psycopg2>=2.8.6,<2.9
-drf-spectacular>=3.13.1,<3.15
+drf-spectacular~=0.27.0
+
